# intuit-grpc-service

./: README.md
personal_info_grpc/: CMakeLists.txt  personal_info_server.cc
personal_info_grpc/cmake_externalproject/: CMakeLists.txt
personal_info_rest/: manifest.yml  pom.xml
personal_info_rest/src/main/java/com/rjones/restservice/: PersonalInfoController.java  PersonalInfoRest.java  RestServiceApplication.java
personal_info_rest/src/main/proto/: personal_info.proto
personal_info_rest/src/resources/: application.properties
protos/: personal_info.proto
